--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,39 @@ body {
   align-items: center;
   height: 200px;
 }
+
+// Snackbar customizations
+.success-snackbar {
+  --mdc-snackbar-container-color: #4caf50 !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-snack-bar-button-color: white !important;
+}
+
+.error-snackbar {
+  --mdc-snackbar-container-color: #f44336 !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-snack-bar-button-color: white !important;
+}
+
+.warning-snackbar {
+  --mdc-snackbar-container-color: #ff9800 !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-snack-bar-button-color: white !important;
+}
+
+.info-snackbar {
+  --mdc-snackbar-container-color: #2196f3 !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-snack-bar-button-color: white !important;
+}
+
+.undo-snackbar {
+  --mdc-snackbar-container-color: #424242 !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+  --mat-snack-bar-button-color: #ffeb3b !important;
+}
+
+.loading-snackbar {
+  --mdc-snackbar-container-color: #607d8b !important;
+  --mdc-snackbar-supporting-text-color: white !important;
+}
