--- a/src/app/features/expenses/list/expense-list-v2.component.scss
+++ b/src/app/features/expenses/list/expense-list-v2.component.scss
@@ -186,7 +186,17 @@
       
       mat-icon {
         font-size: 32px;
+        width: 32px;
+        height: 32px;
         color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        line-height: 1;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        vertical-align: middle;
         filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
       }
     }
